权限控制优化，确保所有用户都能存，取功能是严格控制的
